@@ -50,8 +50,11 @@ public class TReport extends Report {
 
   public TReport(Location root, int effect, Tag tag) {
     super(
-        new Fix(
-            new AddMarkerAnnotation(root, "javax.annotation.Nullable"), ImmutableSet.of(), true),
+        Set.of(
+            new Fix(
+                new AddMarkerAnnotation(root, "javax.annotation.Nullable"),
+                ImmutableSet.of(),
+                true)),
         effect);
     this.expectedValue = effect;
     if (tag != null) {
